@@ -1,0 +1,9 @@
+package org.graalvm.demo;
+
+public class Calculator {
+
+    public int add(int a, int b) {
+        return a + b;
+    }
+
+}
