@@ -7,6 +7,10 @@
 
 - Added options to override parameters from command line
 
+=== Maven plugin
+
+- Add support for dependency exclusions
+
 == Release 0.10.5
 
 - Add missing getters to `DirectoryConfiguration`
